# omath

./: .gitignore  CMakeLists.txt  LICENSE  README.md  profile.cpp  test.cpp
lib/: U33.cpp  U33.h
test/: profile_u33.cpp  test_u33.cpp
